# pangenome_merge

./: .gitignore  LICENSE  README.md  S_pneumoniae_AtB_All_held_in_train_genomes_for_model_N10.txt  S_pneumoniae_AtB_All_held_in_train_genomes_for_model_N6to10.txt  graph_sim5thru9.gml  mapping_COGs.ipynb  meta.yaml  mmseqs2.out  pangenomerge-runner.py  pyproject.toml  snippy.err  snippy.out  test.out  tokenized_genomes.ipynb
.ipynb_checkpoints/: tokenized_genomes-checkpoint.ipynb
panaroo_functions/: cdhit.py  context_search.py  integrate.py  load_graphs.py  write_gml_metadata.py
pangenomerge/: __init__.py  __main__.py  context_similarity.py  manipulate_seqids.py  pyproject.toml  requirements.txt  run_mmseqs.py  sqlite.py
pangenomerge.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
pangenomerge/custom_functions/: context_similarity.py
pangenomerge/panaroo_functions/: context_search.py  requirements.txt
recipes/pangenomerge/: meta.yaml
snakemake/: Snakefile  config.yaml  example_slurm_run.sh  rulegraph.dot
snakemake/.snakemake/iocache/: latest.pkl
snakemake/.snakemake/metadata/: L25mcy9yZXNlYXJjaC9qbGVlcy9qYWNxdWVsaW5lL2F0Yl9hbmFseXNlcy9zcGVjaWVzX3Bhbmdlbm9tZXMvc25ha2VtYWtlX3Rlc3QvcmVzdWx0cy9wb3BwdW5rL2Fzc2lnbi8wMDA=  cmVzdWx0cy9wb3BwdW5rL2Fzc2lnbi9kb25lLnR4dA==  (+4 more)
snakemake/envs/: R.yaml  ggcaller.yaml  panaroo.yaml  pangenomerge.yaml  poppunk.yaml
snakemake/scripts/: adjust_cluster_sizes.R
tokenized_merge_data/: S_pneumoniae_AtB_All_held_in_train_genomes_for_model_N1to5.txt  graph_all.gml  graph_sim0thru4.gml  merged_graph.gml
(+3 files in other folders)
