[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "pangenomerge"
version = "0.9.0"
description = "Create pangenome graphs for hundreds of thousands of bacterial genomes"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Jacqueline Toussaint", email = "lilyjacqueline@ebi.ac.uk"}
]

dependencies = [
  "biopython>=1.80",
]

[tool.setuptools]
packages = ["pangenomerge"]

[project.scripts]
pangenomerge = "pangenomerge.cli:main"
